2007-06-12  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclBasic.c (Tcl_CreateInterp): Turn the [info] command into
	* generic/tclCmdIL.c (TclInitInfoCmd):	 an ensemble, making it easier
	for third-party code to plug into.

	* generic/tclIndexObj.c (Tcl_WrongNumArgs): 
	* generic/tclNamesp.c, generic/tclInt.h (tclEnsembleCmdType): Make
	Tcl_WrongNumArgs do replacement correctly with ensembles and other
	sorts of complex replacement strategies.

2007-06-11  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c:  comments added to explain iPtr->numLevels
	management.

	* generic/tclNamesp.c:   tweaks to Tcl_GetCommandFromObj and
	* generic/tclObj.c:      TclGetNamespaceFromObj; modified the
	usage of structs ResolvedCmdName and ResolvedNsname so that the
	field refNsPtr is NULL for fully qualified names.

2007-06-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    Further TEOvI split, creating a new 
	* generic/tclCompile.h:  TclEvalObjvKnownCommand() function to  
	* generic/tclExecute.c:  handle commands that are already known
	and are not traced. INST_INVOKE now calls into this function
	instead of inlining parts of TEOvI. Same perf, better isolation.

	***POTENTIAL INCOMPAT*** There is a subtle issue with the timing
	of execution traces that is changed here - first change appeared
	in my commit of 2007-04-03 [Patch 1693802], which caused some
	divergence between compiled and non-compiled code.
	***THIS CHANGE IS UNDER REVIEW***
	
2007-06-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* README: updated links. [Bug 1715081]

	* generic/tclExecute.c (TclExecuteByteCode): restore support for
	INST_CALL_BUILTIN_FUNC1 and INST_CALL_FUNC1 bytecodes to support
	8.4- precompiled sources (math functions). [Bug 1720895]

2007-06-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInt.h:
	* generic/tclNamesp.c:
	* generic/tclObj.c:
	* generic/tclvar.c: new macros TclGetCurrentNamespace() and